# olist_data_warehouse

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml  settings.yaml
config/: logconfig.py  settings.yaml
docs/engineering/cli/: extract_cli.md  load_cli.md  transform_cli.md
docs/engineering/etl/: extract.md  index.md  load.md  transform.md
docs/metrics/: customer_kpis.md
sql/analytics/customer/: 00_snapshot_calendar.sql  01_customer_metrics.sql  02_customer_behavior_features.sql  03_customer_status.sql  04_customer_segments.sql
sql/analytics/seller/: 03_seller_quality_metrics.sql  04_seller_segments.sql
sql/bi/: 00_bi_customer_kpi.sql  00_daily_kpis.sql  01_bi_geo_kpi.sql  01_geo_demand_kpis.sql  02_bi_product_kpi.sql  02_geo_supply_kpis.sql  03_bi_seller_kpi.sql  03_geo_kpis.sql  04_bi_order_experience.sql  05_product_kpis.sql  customer_kpis.sql  daily_kpis.sql  geo_demand_kpis.sql  geo_supply_kpis.sql  product_kpis.sql
sql/core/: 00_dim_date.sql  00_state_names_maps.sql  01_dim_products.sql  01_dim_state.sql  02_dim_customer.sql  03_fact_order_items.sql  04_dim_seller.sql  04_reviews_agg.sql  05_dim_product.sql  05_fact_products.sql  06_fact_orders.sql  07_fact_order_items.sql  08_fact_reviews.sql
sql/kpi/: 00_kpi_customer.sql  01_kpi_daily.sql  02_kpi_product.sql  03_kpi_seller.sql  04_sem_customer_status.sql  05_sem_customer_segment.sql  06_sem_seller_segment.sql
sql/rollup/: 00_snapshot_calendar.sql  01_rollup_customer_monthly.sql  02_rollup_customer_orders.sql  03_rollup_geo_demand.sql  04_rollup_geo_supply.sql  05_rollup_product_sales.sql  06_rollup_seller_orders.sql
src/cli/: extract_csv_cli.py  extract_rates_cli.py  load_bigquery_cli.py  load_layers_cli.py  transform_cli.py
src/config/: config_loader.py  logconfig.py
src/eda/: EDA.ipynb
src/eda/.ipynb_checkpoints/: EDA-checkpoint.ipynb
src/etl/extract/: extract_csv.py  extract_exchange_rates.py
src/etl/load/: create_datasets.py  create_views.py  load_bigquery.py  pandera_to_bq.py
(+32 files in other folders)
